Updated NPM modules and added GitHub links

--- a/src/less/components/dashboard.less
+++ b/src/less/components/dashboard.less
@@ -576,8 +576,8 @@
     }
     > div {
         flex: 1;
-        text-align: center;
         letter-spacing: -0.03em;
+        text-align: left;
         div:first-child {
             font-size: 13px;
             line-height: 1;
