Updated Zoom to include iPhone 12 sizing

--- a/src/less/components/layout.less
+++ b/src/less/components/layout.less
@@ -992,9 +992,8 @@ body {
 }
 
 .preview {
-    &[data-zoom='iPhoneXS'],
-    &[data-zoom='iPhoneXR'],
-    &[data-zoom='iPhoneXSMax'],
+    &[data-zoom='iPhone12'],
+    &[data-zoom='iPhone12Mini'],
     &[data-zoom='iPadPro'],
     &[data-zoom='iPadProBig'] {
         iframe,
